# graduation_paper

./: README.md
depends_package/moveit_jog_arm/: CMakeLists.txt
depends_package/moveit_jog_arm/config/: ur_config_arm.yaml  ur_config_xbox.yaml  ur_test.yaml
depends_package/moveit_jog_arm/launch/: jog_with_htc.launch  jog_with_xbox.launch  spacenav_cpp.launch
depends_package/moveit_jog_arm/src/: collision_check_thread.cpp  jog_calcs.cpp  jog_ros_interface.cpp
depends_package/ur3_new_moveit/: .setup_assistant  CMakeLists.txt
depends_package/ur3_new_moveit/config/: fake_controllers.yaml  ros_controllers.yaml  ur3_controller.yaml  ur3e.srdf
depends_package/ur3_new_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  (+8 more)
visual_servo_tsuchida/: CMakeLists.txt  package.xml
visual_servo_tsuchida/action/: Servo_message.action
visual_servo_tsuchida/include/servo_3/: servo_base.h
visual_servo_tsuchida/include/visual_servo_tsuchida/: client_visual.h  server_visual.h  servo_base.h
visual_servo_tsuchida/launch/: arm_jog.launch  baxter.launch  client_visual_servo.launch  gazebo_show.launch  moveit.launch  server_visual_servo.launch  setup_simulator.launch  uvc_cam.launch
visual_servo_tsuchida/models/ar_marker/: model-1_5.sdf  model.config  model.sdf
visual_servo_tsuchida/models/ar_marker/meshes/: Marker0.dae
visual_servo_tsuchida/result_file/: end_pose_file.txt  mask_file.txt
visual_servo_tsuchida/scripts/: arm_control.py  first_rotate.py  ur_control.py
visual_servo_tsuchida/src/: client_main.cpp  client_visual.cpp  main.cpp  moveit_try.cpp  server_main.cpp  server_visual.cpp  servo_base_1.cpp  servo_base_2.cpp  servo_base_3.cpp  tutorial-mb-generic-tracker.cpp
visual_servo_tsuchida/urdf/: model.urdf.xacro  model_gazbo.xacro
visual_servo_tsuchida/world/: object.world
visual_servo_tsuchida/yaml/: camera_buffalo.yaml
